@@ -31,18 +31,7 @@
 
 // name re-resolution adapted from a patch by Brent Priddy.
 
-NetworkAddress::NetworkAddress() :
-    m_address(NULL),
-    m_hostname(),
-    m_port(0)
-{
-    // note -- make no calls to Network socket interface here;
-    // we're often called prior to Network::init().
-}
-
 NetworkAddress::NetworkAddress(int port) :
-    m_address(NULL),
-    m_hostname(),
     m_port(port)
 {
     checkPort();
@@ -51,15 +40,13 @@ NetworkAddress::NetworkAddress(int port) :
 }
 
 NetworkAddress::NetworkAddress(const NetworkAddress& addr) :
-    m_address(addr.m_address != NULL ? ARCH->copyAddr(addr.m_address) : NULL),
     m_hostname(addr.m_hostname),
     m_port(addr.m_port)
 {
-    // do nothing
+    *this = addr;
 }
 
 NetworkAddress::NetworkAddress(const String& hostname, int port) :
-    m_address(NULL),
     m_hostname(hostname),
     m_port(port)
 {
@@ -119,34 +106,39 @@ NetworkAddress::NetworkAddress(const String& hostname, int port) :
 
 NetworkAddress::~NetworkAddress()
 {
-    if (m_address != NULL) {
+    if (m_address != nullptr) {
         ARCH->closeAddr(m_address);
+        m_address = nullptr;
     }
 }
 
 NetworkAddress&
 NetworkAddress::operator=(const NetworkAddress& addr)
 {
-    ArchNetAddress newAddr = NULL;
-    if (addr.m_address != NULL) {
+    if (m_address != nullptr) {
+        ARCH->closeAddr(m_address);
+        m_address = nullptr;
+    }
+
+    ArchNetAddress newAddr = nullptr;
+    if (addr.m_address != nullptr) {
         newAddr = ARCH->copyAddr(addr.m_address);
     }
-    if (m_address != NULL) {
-        ARCH->closeAddr(m_address);
-    }
-    m_address  = newAddr;
+    m_address = newAddr;
+
     m_hostname = addr.m_hostname;
     m_port     = addr.m_port;
     return *this;
 }
 
-void
-NetworkAddress::resolve()
+size_t
+NetworkAddress::resolve(size_t index)
 {
+    size_t resolvedAddressesCount = 0;
     // discard previous address
-    if (m_address != NULL) {
+    if (m_address != nullptr) {
         ARCH->closeAddr(m_address);
-        m_address = NULL;
+        m_address = nullptr;
     }
 
     try {
@@ -154,9 +146,34 @@ NetworkAddress::resolve()
         // up the name.
         if (m_hostname.empty()) {
             m_address = ARCH->newAnyAddr(IArchNetwork::kINET);
+            resolvedAddressesCount = 1;
         }
         else {
-            m_address = ARCH->nameToAddr(m_hostname);
+            // Logic for temporary filtring only ipv4 addresses
+            std::vector<ArchNetAddress> ipv4OnlyAddresses;
+            {
+                auto adresses = ARCH->nameToAddr(m_hostname);
+                for (auto address : adresses) {
+                    if (ARCH->getAddrFamily(address) == IArchNetwork::kINET) {
+                        ipv4OnlyAddresses.emplace_back(address);
+                    }
+                }
+            }
+
+            resolvedAddressesCount = ipv4OnlyAddresses.size();
+            assert(resolvedAddressesCount > 0);
+            if (index < resolvedAddressesCount - 1) {
+                m_address = ipv4OnlyAddresses[index];
+            }
+            else {
+                m_address = ipv4OnlyAddresses[resolvedAddressesCount - 1];
+            }
+
+            for(auto address : ipv4OnlyAddresses) {
+                if(m_address != address) {
+                    ARCH->closeAddr(address);
+                }
+            }
         }
     }
     catch (XArchNetworkNameUnknown&) {
@@ -174,6 +191,8 @@ NetworkAddress::resolve()
 
     // set port in address
     ARCH->setAddrPort(m_address, m_port);
+
+    return resolvedAddressesCount;
 }
 
 bool
@@ -191,7 +210,7 @@ NetworkAddress::operator!=(const NetworkAddress& addr) const
 bool
 NetworkAddress::isValid() const
 {
-    return (m_address != NULL);
+    return (m_address != nullptr);
 }
 
 const ArchNetAddress&
